# web-scraper

./: README.md  pyproject.toml  scraper.py
